# dagger

./: Cargo.toml  README.md
dagger_layout/: Cargo.toml
dagger_layout/src/: geometry.rs  lib.rs
dagger_layout/src/scheme/: mod.rs  stacked.rs
dagger_macros/: Cargo.toml
dagger_macros/src/: lib.rs
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: element.rs  lib.rs  main.rs  window.rs
src/element/: mod.rs
src/layout/: geometry.rs  mod.rs  vertex.rs
src/style/: attributes.rs  layout.rs  mod.rs  types.rs
