[package]
# Package Meta
name = "dagger"
version = "0.1.0"
description = "A rust UI library."
keywords = [ "ui", "graphics", "window", "opengl", "dagger" ]
categories = [ "graphics", "gui", "rendering::engine" ]
readme = "README.md"
license = "GPL-3.0-or-later"

# Rust Meta
edition = "2021"

# Author Meta
authors = [ "Thomas Reddy <contact@thomasreddy.com>" ]
repository = "https://github.com/standard-abstractions/dagger"

[dependencies]
# Dagger
dagger_layout = { path = "/Users/Thomas/Projects/standard-abstractions/dagger_layout", features = [ "glium" ] }

# Graphics
glium = "0.34"
winit = "0.29"
glutin = "0.31"
image = "0.25"

# Utility
vek = "0.17"